test/error/ast/DeclarationNotFound.mod
MODULE DeclarationNotFound;
BEGIN
  a := 1;
END DeclarationNotFound.
